# Wuvy

./: .gitignore  README.md
compiler/: CMakeLists.txt  TestSource.txt  compiler_test.wuvy  meson.build
compiler/examples/: overview.wuvy
compiler/include/Wuvy/: Compiler.hpp  Lexer.hpp
compiler/include/Wuvy/Common/: Types.hpp
compiler/include/Wuvy/Common/Patterns/: Visitor.hpp
compiler/include/Wuvy/Utils/: DynamicSwitch.hpp  Functions.hpp  Types.hpp
compiler/lib/Utils/: Functions.cpp
compiler/src/: Compiler.cpp  Lexer.cpp  Main.cpp  main.cpp
compiler/subprojects/: fmt.wrap
wcc/: Makefile  test.txt
wcc/include/: compiler.h  lexer.h  utils.h
wcc/lib/: utils.cpp
wcc/src/: lexer.cpp  main.cpp
